<resources>
    <string name="app_name">Weather</string>
    <string name="weather_app">Weather app</string>
    <string name="lab_text_select_city">Select city</string>
    <string name="btn_result">Result</string>
    <string name="textview_result"></string>
    <string name="edit_text_enter_the_city">Enter the city</string>
    <string name="text_label_city">City</string>
    <string name="text_label_temperature">Temperature</string>
    <string name="text_label_pressure">Pressure</string>
    <string name="text_label_humidity">Humidity</string>
    <string name="text_label_wind">Wind</string>
    <string name="text_prefix_humidity">%</string>
    <string name="text_prefix_pressure">mm r.s</string>
    <string name="text_prefix_wind">m/s</string>
    <string name="text_prefix_temperature">C</string>
    <string name="text_city_not_found">City not found</string>
    <string name="switch_text_show_humidity">Show humidity</string>
    <string name="switch_text_show_pressure">Show pressure</string>
    <string name="switch_text_show_wind">Show wind</string>
    <string name="text_add">add</string>
    <string name="text_delete">delete</string>
    <string name="text_ok">Ок</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_dialog_edit_item">Enter the name of the city:</string>
    <string name="text_edit">edit</string>
    <string name="text_turn_to_show_humidity">Turn, to show humidity</string>
    <string name="text_turn_to_show_pressure">Turn, to show pressure</string>
    <string name="text_turn_to_show_wind">Turn, to show wind</string>
    <string name="setting">setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_title_exits">Do you really want to close the app?</string>
    <string name="dialog_button_exit">Ок</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="nav_header_title">Weather studio</string>
    <string name="email">silantyevmn@yandex.ru</string>
    <string name="bottom_navigation_menu_title_day">day</string>
    <string name="bottom_navigation_menu_title_week">week</string>
    <string name="bottom_navigation_menu_title_month">month</string>
    <string name="error_json_null">Error, json null</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="text_info_progress_internet">Downloading from the weather server is in progress...</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="main_recucler_text_current_location">current location</string>
    <string name="text_dialog_delete_and_update_error">This menu item can not be changed!</string>
</resources>
