<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_enter_the_city"
        android:inputType="text" />

    <Switch
        android:id="@+id/switch_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_text_show_humidity" />

    <Switch
        android:id="@+id/switch_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_text_show_pressure" />

    <Switch
        android:id="@+id/switch_wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_text_show_wind" />

    <Button
        android:id="@+id/button_show_description"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_result" />

    <TextView
        android:id="@+id/textview_description"
        style="@style/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
